# dynlib-c

./: CMakeLists.txt  README.md
src/: bar.c  foo.c  main.c
